--- a/plugins/extapptypes/src/com/sun/tools/visualvm/modules/customtype/ui/ApplicationTypeForm.form
+++ b/plugins/extapptypes/src/com/sun/tools/visualvm/modules/customtype/ui/ApplicationTypeForm.form
@@ -212,7 +212,10 @@
         <Component class="javax.swing.JTextArea" name="appTypeDescription">
           <Properties>
             <Property name="columns" type="int" value="20"/>
+            <Property name="lineWrap" type="boolean" value="true"/>
             <Property name="rows" type="int" value="5"/>
+            <Property name="tabSize" type="int" value="4"/>
+            <Property name="wrapStyleWord" type="boolean" value="true"/>
             <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
               <ComponentRef name="appTypeName"/>
             </Property>
