HTML style test
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2786 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/theme/css/theme.css
+++ b/www/theme/css/theme.css
@@ -99,6 +99,12 @@ h3 {
     font-size: 12px !important;
 }
 
+h4 {
+    font-size: 12px !important;
+    background: #f0f1f2 !important;
+    padding: 1px !important;
+}
+
 th, td {
     padding: 0px;
 }
