--- a/www/theme/css/theme.css
+++ b/www/theme/css/theme.css
@@ -100,9 +100,12 @@ h3 {
 }
 
 h4 {
-    font-size: 12px !important;
+    font-size: 11px !important;
     background: #f0f1f2 !important;
-    padding: 1px !important;
+    padding-top: 1px !important;
+    padding-bottom: 1px !important;
+    padding-left: 5px !important;
+    padding-right: 5px !important;
 }
 
 th, td {
