--- a/www/css/index.css
+++ b/www/css/index.css
@@ -161,7 +161,9 @@ div#contents_hints h3.first {
 }
 
 #contents_hints p a, #contents_hints p a:visited {
-    margin-top: 20px !important;
+    margin-top: 40px !important;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 div#subprojects {
