--- a/www/css/index.css
+++ b/www/css/index.css
@@ -160,10 +160,9 @@ div#contents_hints h3.first {
     margin-top: 0px !important;
 }
 
-#contents_hints p a, #contents_hints p a:visited {
+#contents_hints p, #contents_hints p {
     margin-top: 40px !important;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 41px !important;
 }
 
 div#subprojects {
