Twitter link rev., v1
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2820 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -160,6 +160,11 @@ div#contents_hints h3.first {
     margin-top: 0px !important;
 }
 
+#index_links p {
+    margin-top: 35px !important;
+    margin-left: 38px !important;
+}
+
 div#subprojects {
     display:none;
 }
