java.net migration
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2903 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -168,3 +168,8 @@ div#contents_hints h3.first {
 div#subprojects {
     display:none;
 }
+
+#contents_div {
+    margin: 15px 8px 8px 8px;
+    padding: 0px;
+}
