Fixed broken image Updated comments
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2912 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/css/visualvm.css
+++ b/www/css/visualvm.css
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
-   --- visualvm.dev.java.net customizations ------------------------------------
-   --- 
+   --- visualvm.java.net customizations ------------------------------------
+   ---
    --- author: Jiri Sedlacek ---------------------------------------------------
    -----------------------------------------------------------------------------
 */
