--- a/www/theme/css/theme.css
+++ b/www/theme/css/theme.css
@@ -1,5 +1,5 @@
 /* -----------------------------------------------------------------------------
-   --- visualvm.dev.java.net customizations ------------------------------------
+   --- visualvm.java.net customizations ------------------------------------
    ---
    --- author: Jiri Sedlacek ---------------------------------------------------
    -----------------------------------------------------------------------------
@@ -199,7 +199,7 @@ div#loginbar a:hover {
 }
 
 #logobar {
-    background: url('https://visualvm.dev.java.net/theme/images/b_filler.png') repeat-x;
+    background: url('http://visualvm.java.net/theme/images/b_filler.png') repeat-x;
     height: 60px;
 }
 
