--- a/www/theme/css/theme.css
+++ b/www/theme/css/theme.css
@@ -66,6 +66,9 @@ div#footer {
     display: none;
 }
 
+small.finePrint {
+    display: none;
+}
 
 /*
  -------------------------------------------------------------------------------
@@ -291,8 +294,8 @@ div#loginbar a:hover {
 }
 
 #cfooter_links {
-    margin-top: 3px;
-    margin-right: 305px;
+    margin-top: 0px;
+    margin-right: 7px;
 }
 
 #cfooter_logos {
@@ -300,6 +303,7 @@ div#loginbar a:hover {
     text-align: right;
     width: 290px;
     border-left: 2px solid #cccccc;
+    margin-right: 7px;
 }
 
 #project_links {
@@ -316,8 +320,6 @@ div#loginbar a:hover {
 #portal_links {
     font-size: 11px !important;
     color: #888888 !important;
-    margin-top: 3px;
-    text-align: right;
 }
 
 #portal_links a, #portal_links a:visited {
