visualvm.java.net and netbeans.org websites now use https as default
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3226 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/templates/apisupport/javahelp/com/sun/tools/visualvm/apisupport/docs/visualvmview-about.html
+++ b/templates/apisupport/javahelp/com/sun/tools/visualvm/apisupport/docs/visualvmview-about.html
@@ -47,8 +47,8 @@ and open the template in the editor.
 <!--
 Tip: to create a link which will open in an external web browser, try:
 <object classid="java:org.netbeans.modules.javahelp.BrowserDisplayer">
-<param name="content" value="http://www.netbeans.org/">
-<param name="text" value="<html><u>http://www.netbeans.org/</u></html>">
+<param name="content" value="https://www.netbeans.org/">
+<param name="text" value="<html><u>https://www.netbeans.org/</u></html>">
 <param name="textFontSize" value="medium">
 <param name="textColor" value="blue">
 </object>
