Fixed HTML formatting for docs & build guide
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3270 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/css/visualvm.css
+++ b/www/css/visualvm.css
@@ -28,6 +28,11 @@
     vertical-align: top;
 }
 
+#contents_main_doc {
+    margin-right: 0px;
+    vertical-align: top;
+}
+
 #contents_hints {
     float: right;
     width: 232px;
